# LMS-Django

./: .gitignore  manage.py  pyproject.toml
course/: admin.py  models.py
course/migrations/: 0001_initial.py
learningmanagement/: asgi.py  settings.py  urls.py  wsgi.py
lms_auth/: admin.py  apps.py  managers.py  models.py  urls.py
lms_auth/gql/: input.py  mutations.py  queries.py  schema.py  types.py
lms_auth/migrations/: 0001_initial.py
lms_settings/: apps.py
